# tricycle_sim

./: CMakeLists.txt  README.md  package.xml
config/: cob_torso_0411.yaml  cob_tricycle_drive_controller.yaml  cob_tricycle_steering_controller.yaml  cob_tricycle_steering_controller_0404.yaml  laser_merge.yaml  laser_merge_2.yaml  laser_merge_3.yaml  mapper_params_cob_0409.yaml  mapper_params_online_async.yaml  navi_cob_drive.yaml  navi_tricycle_drive.yaml  navi_tricycle_steering.yaml  tricycle_drive_controller.yaml  tricycle_steering_controller.yaml  twist_mux_stamped.yaml
launch/: cob_drive_0409.launch.py  cob_slam_0411.launch.py  cob_steering_0403.launch.py  cob_steering_0404.launch.py  cob_steering_0405.launch.py  cob_steering_0407.launch.py  cob_steering_0408_merge_scan.launch.py  cob_teleop_0402.launch.py  cob_torso_0411.launch.py  cob_tricycle_drive.launch.py  tricycle_drive.launch.py  tricycle_drive_nav2_0408.launch.py  tricycle_steering.launch.py  tricycle_steering_imu.launch.py  tricycle_steering_imu_0405.launch.py  tricycle_steering_nav2_0405.launch.py  tricycle_teleop.launch.py
src/: cmd_vel_bridge_TwistStamped_node.py  cmd_vel_bridge_Twist_node.py  cmd_vel_bridge_node.py  position_publisher_node.cpp
urdf/: cob4-25_0326.urdf  cob4-25_0402.urdf  cob4-25_0403.urdf  cob4-25_0404.urdf  cob4-25_0407.urdf  cob4-25_0408.urdf  cob4-25_0411_torso.urdf  cob4-25_drive_0409.urdf  min_tricycle_imu_0404.xacro.urdf  test_tricycle_drive.xacro.urdf  test_tricycle_steering.xacro.urdf
world/: boxes.sdf  boxes.world
